fix: input method for amount in "add"-function.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pyTelegramBotAPI==4.23.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-openpyxl==3.1.5
+python-telegram-bot-calendar==1.0.5
+pytz==2024.2
+requests==2.32.3
 schedule==1.2.2
 django-scheduler==0.10.1
 colorama==0.4.6
